# pdf-rendering-srv

./: .dockerignore  .editorconfig  .gitignore  .releaserc.json  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.adoc  README.md  TODO.md  build.rs  buildImage.bash  buildImageBuildkit.bash  buildkit.Dockerfile  buildkit.dockerignore  lint.sh  pdf_rendering.proto
.github/workflows/: approve-merge.yaml  build.yaml  pr-lint.yml  release-pr.yaml  release.yaml
cfg/: config.json  config_production.json
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: index.adoc
src/: main.rs  pdf_utils.rs  proto.rs  renderer.rs  s3.rs  server.rs  types.rs
