[package]
name = "pdf-rendering-srv"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "rt", "full"] }
prost = "0.13.3"
headless_chrome = "1.0.15"
tonic = "0.12.3"
prost-types = "0.13.3"
tokio-stream = "0.1.16"
tiny_http = "0.12.0"
tonic-reflection = "0.12.3"
tonic-health = "0.12.3"
anyhow = "1.0.89"
log = "0.4.22"
env_logger = "0.11.5"
config = "0.14.0"
aws-sdk-s3 = "1.54.0"
aws-sdk-config = "1.47.0"
aws-smithy-runtime-api = "1.7.2"
lopdf = "0.34.0"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
prost-wkt-types = "0.6.0"
ulid = "1.1.3"

[build-dependencies]
tonic-build = "0.12.3"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
flate2 = "1.0.34"
tar = "0.4.42"
