[package]
name = "pdf-rendering-srv"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "rt", "full"] }
prost = "0.13.4"
headless_chrome = "1.0.15"
tonic = "0.12.3"
prost-types = "0.13.4"
tokio-stream = "0.1.17"
tiny_http = "0.12.0"
tonic-reflection = "0.12.3"
tonic-health = "0.12.3"
anyhow = "1.0.95"
log = "0.4.25"
env_logger = "0.11.6"
config = "0.15.6"
aws-sdk-s3 = "1.71.0"
aws-sdk-config = "1.59.0"
aws-smithy-runtime-api = "1.7.3"
lopdf = "0.35.0"
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
prost-wkt-types = "0.6.0"
ulid = "1.1.4"

[build-dependencies]
tonic-build = "0.12.3"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
flate2 = "1.0.35"
tar = "0.4.43"
